--- a/css/painter.css
+++ b/css/painter.css
@@ -1,34 +1,43 @@
-/* line 14, painter.scss */
+/* line 23, painter.scss */
 * {
   box-sizing: border-box; }
 
-/* line 17, painter.scss */
+/* line 26, painter.scss */
 body {
   background: #555;
   font-family: Helvetica,Arial,sans-serif; }
 
-/* line 21, painter.scss */
+/* line 30, painter.scss */
+.container {
+  max-width: 1080px; }
+
+/* line 33, painter.scss */
+header {
+  height: 160px; }
+
+/* line 36, painter.scss */
 canvas {
+  width: 100%;
+  height: 423px;
   background: #fff;
   display: block;
-  margin: 50px auto 10px;
+  margin: 10px auto 0px;
   border-radius: 5px;
   box-shadow: 0 2px 0 0 #222;
   /*cursor*/ }
 
-/* line 37, painter.scss */
+/* line 46, painter.scss */
 .controls {
   margin: 0 auto;
-  width: 600px;
   border-radius: 5px; }
-  /* line 41, painter.scss */
+  /* line 49, painter.scss */
   .controls ul {
     list-style: none;
     float: left;
-    padding: 10px 0 10px;
+    padding: 10px 0 0;
     width: 100%;
     text-align: center; }
-    /* line 47, painter.scss */
+    /* line 55, painter.scss */
     .controls ul li {
       display: inline-block;
       margin: 0 5px 5px;
@@ -39,7 +48,7 @@ canvas {
       cursor: pointer;
       border: 0;
       box-shadow: 0 2px 0 0 #222; }
-      /* line 52, painter.scss */
+      /* line 60, painter.scss */
       .controls ul li.selected {
         border: 2px solid #ccc;
         width: 48px;
@@ -48,52 +57,56 @@ canvas {
         box-shadow: none; }
 
 /*for each item in $rainbow-color-names, create a class with a background set to the corresponding color in $rainbow-colors.*/
-/* line 6, painter.scss */
+/* line 7, painter.scss */
 .red {
   background: #f42a35; }
 
-/* line 6, painter.scss */
+/* line 7, painter.scss */
 .orange {
   background: #ffa200; }
 
-/* line 6, painter.scss */
+/* line 7, painter.scss */
 .yellow {
   background: #ffd500; }
 
-/* line 6, painter.scss */
-.yellow-green {
+/* line 7, painter.scss */
+.light-green {
   background: #a8bf12; }
 
-/* line 6, painter.scss */
+/* line 7, painter.scss */
 .green {
   background: #2eb52f; }
 
-/* line 6, painter.scss */
+/* line 7, painter.scss */
 .light-blue {
   background: #00aab5; }
 
-/* line 6, painter.scss */
+/* line 7, painter.scss */
 .blue {
   background: #325bc5; }
 
-/* line 6, painter.scss */
+/* line 7, painter.scss */
 .purple {
   background: #992fe0; }
 
-/* line 67, painter.scss */
+/* line 7, painter.scss */
+.brown {
+  background: #875e37; }
+
+/* line 75, painter.scss */
 .black {
   background: #000; }
 
-/* line 71, painter.scss */
+/* line 79, painter.scss */
 #colorSelect {
   background: #fff;
   border-radius: 5px;
   clear: both;
   margin: 20px auto 0;
-  padding: 10px;
-  width: 360px;
+  padding: 5px 0 10px 0;
+  width: 100%;
   position: relative; }
-  /* line 79, painter.scss */
+  /* line 87, painter.scss */
   #colorSelect:after {
     bottom: 100%;
     left: 50%;
@@ -108,7 +121,7 @@ canvas {
     border-width: 12px;
     margin-left: -10px; }
 
-/* line 95, painter.scss */
+/* line 103, painter.scss */
 #newColor {
   height: 50px;
   width: 50px;
@@ -123,24 +136,24 @@ canvas {
   box-shadow: 0 3px 0 0 #222;
   float: left;
   border: none;
-  margin: 10px 20px 20px 10px; }
+  margin: 20px; }
 
-/* line 108, painter.scss */
+/* line 116, painter.scss */
 .sliders p {
   margin: 8px 0;
   vertical-align: middle; }
-/* line 112, painter.scss */
+/* line 120, painter.scss */
 .sliders label {
   display: inline-block;
   margin: 0 10px 0 10px;
   width: 55px;
   font-size: 14px; }
-/* line 118, painter.scss */
+/* line 126, painter.scss */
 .sliders input {
   position: relative;
   top: 2px; }
 
-/* line 124, painter.scss */
+/* line 132, painter.scss */
 #addNewColor {
   background: #946D9B;
   box-shadow: 0 4px 0 0 #5B575C;
@@ -154,6 +167,6 @@ canvas {
   border-top: 1px solid #5B575C;
   border-radius: 0 0 5px 5px;
   clear: both;
-  margin: 12px -10px -7px;
+  margin: 12px 0px -7px;
   padding: 5px 10px;
-  width: 360px; }
+  width: 100%; }
