--- a/sass/painter.scss
+++ b/sass/painter.scss
@@ -34,8 +34,9 @@ header{
 	height: 160px;
 }
 canvas {
-	width: 100%;
-	height: 423px;
+	max-width: 100%;
+	width:100%;
+	height: auto;
 	background: #fff;
 	display:block;
 	margin: 10px auto 0px;
