--- a/css/painter.css
+++ b/css/painter.css
@@ -1,4 +1,4 @@
-/* line 50, painter.scss */
+/* line 51, painter.scss */
 * {
   box-sizing: border-box; }
 
@@ -8,32 +8,54 @@ html:after, body:after, .row:after, .columns:after, .container:after {
   display: table;
   clear: both; }
 
-/* line 56, painter.scss */
+/* line 57, painter.scss */
 body {
-  background: #666;
+  margin: 0;
+  background: #777;
   font-family: Helvetica,Arial,sans-serif; }
 
-/* line 60, painter.scss */
+/* line 62, painter.scss */
 .container {
   max-width: 1080px; }
 
-/* line 64, painter.scss */
+/************ HEADER *******************************/
+/* line 67, painter.scss */
 header {
-  height: 160px; }
+  height: 160px;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0px 3px 2px 0px #111; }
+  /* line 72, painter.scss */
+  header .recentDrawing {
+    max-height: 100%;
+    float: right; }
+  /* line 76, painter.scss */
+  header #logo {
+    max-height: 100%;
+    padding: 4px; }
+
+/************ HERO TEXT ****************************/
+/* line 84, painter.scss */
+h1 {
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px #333;
+  margin: 10px 0 0; }
 
 /************ LEFT COLUMN **************************/
-/* line 68, painter.scss */
+/* line 93, painter.scss */
 #imageContainer {
   text-align: center;
   font: 0/0 a; }
-  /* line 72, painter.scss */
+  /* line 97, painter.scss */
   #imageContainer:before {
     content: ' ';
     display: inline-block;
     vertical-align: middle;
     /* vertical alignment of the inline element */
     height: 100%; }
-  /* line 78, painter.scss */
+  /* line 103, painter.scss */
   #imageContainer img {
     display: inline-block;
     vertical-align: middle;
@@ -42,8 +64,9 @@ header {
     max-height: 100%;
     padding: 20px; }
 
-/* line 87, painter.scss */
+/* line 112, painter.scss */
 #pokemonName {
+  font-family: 'Open Sans', sans-serif;
   text-align: center;
   color: white;
   font-size: 36px;
@@ -51,45 +74,84 @@ header {
   text-shadow: 0 2px #333; }
 
 /************ CENTER COLUMN **************************/
-/* line 95, painter.scss */
+/* line 121, painter.scss */
 .center-column {
   padding-top: 30px;
   text-align: center; }
 
-/* line 99, painter.scss */
+/* line 125, painter.scss */
 #timer {
   color: #fff;
-  font-family: Helvetica,Arial,sans-serif;
-  font-size: 48px; }
+  font-family: 'Open Sans', sans-serif;
+  font-size: 48px;
+  display: none; }
 
-/* line 104, painter.scss */
+/* line 131, painter.scss */
 #newRound {
   position: relative;
-  background: #74bb3a;
-  box-shadow: 0 4px 0 0 #578c2b;
+  background: #78bc3f;
+  box-shadow: 0 4px 0 0 #306901;
   color: #fff;
   outline: none;
-  text-shadow: 0 1px #578c2b;
+  text-shadow: 0 1px #306901;
   display: block;
   font-size: 16px;
   border: none;
+  font-family: 'Open Sans', sans-serif;
   border-radius: 5px;
   clear: both;
   border-radius: 5px;
-  font-size: 20px;
+  font-size: 36px;
   line-height: 30px;
-  margin: 10px;
-  padding: 5px; }
-  /* line 38, painter.scss */
+  margin: 10px auto;
+  padding: 15px 20px; }
+  /* line 39, painter.scss */
   #newRound:enabled:active {
     top: 2px;
     box-shadow: none; }
-  /* line 42, painter.scss */
+  /* line 43, painter.scss */
   #newRound:disabled {
     opacity: 0.7; }
 
+/* line 139, painter.scss */
+#share, #save {
+  position: relative;
+  background: #478e95;
+  box-shadow: 0 4px 0 0 #095057;
+  color: #fff;
+  outline: none;
+  text-shadow: 0 1px #095057;
+  display: block;
+  font-size: 16px;
+  border: none;
+  font-family: 'Open Sans', sans-serif;
+  border-radius: 5px;
+  clear: both;
+  border-radius: 5px;
+  margin: 10px auto;
+  font-size: 24px;
+  line-height: 24px;
+  padding: 10px 20px;
+  display: none; }
+  /* line 39, painter.scss */
+  #share:enabled:active, #save:enabled:active {
+    top: 2px;
+    box-shadow: none; }
+  /* line 43, painter.scss */
+  #share:disabled, #save:disabled {
+    opacity: 0.7; }
+
+/* line 148, painter.scss */
+#save {
+  text-decoration: none;
+  margin: 0 auto; }
+  /* line 151, painter.scss */
+  #save:active {
+    top: 2px;
+    box-shadow: none; }
+
 /************ RIGHT COLUMN **************************/
-/* line 114, painter.scss */
+/* line 158, painter.scss */
 #canvas, #imageContainer {
   max-width: 100%;
   width: 100%;
@@ -102,18 +164,18 @@ header {
   pointer-events: none;
   cursor: url(../img/cursor.png), crosshair; }
 
-/* line 127, painter.scss */
+/* line 171, painter.scss */
 .controls {
   margin: 0 auto;
   border-radius: 5px; }
-  /* line 130, painter.scss */
+  /* line 174, painter.scss */
   .controls ul {
     list-style: none;
     float: left;
-    padding: 10px 0 0;
+    padding: 0;
     width: 100%;
     text-align: center; }
-    /* line 136, painter.scss */
+    /* line 180, painter.scss */
     .controls ul li {
       display: inline-block;
       margin: 0 5px 5px;
@@ -124,14 +186,14 @@ header {
       cursor: pointer;
       border: 0;
       box-shadow: 0 2px 0 0 #222; }
-      /* line 141, painter.scss */
+      /* line 185, painter.scss */
       .controls ul li.selected {
         border: 2px solid #ccc;
         width: 50px;
         height: 50px;
         top: 2px;
         box-shadow: none; }
-      /* line 148, painter.scss */
+      /* line 192, painter.scss */
       .controls ul li a {
         display: block;
         height: 100%; }
@@ -177,11 +239,11 @@ header {
 .gray {
   background: #8e969b; }
 
-/* line 160, painter.scss */
+/* line 204, painter.scss */
 .black {
   background: #000; }
 
-/* line 164, painter.scss */
+/* line 208, painter.scss */
 #colorSelect {
   background: #fff;
   border-radius: 5px;
@@ -190,7 +252,7 @@ header {
   padding: 5px 0 10px 0;
   width: 100%;
   position: relative; }
-  /* line 172, painter.scss */
+  /* line 216, painter.scss */
   #colorSelect:after {
     bottom: 100%;
     left: 50%;
@@ -205,7 +267,7 @@ header {
     border-width: 12px;
     margin-left: -10px; }
 
-/* line 188, painter.scss */
+/* line 232, painter.scss */
 #newColor {
   height: 50px;
   width: 50px;
@@ -222,22 +284,22 @@ header {
   border: none;
   margin: 20px; }
 
-/* line 201, painter.scss */
+/* line 245, painter.scss */
 .sliders p {
   margin: 8px 0;
   vertical-align: middle; }
-/* line 205, painter.scss */
+/* line 249, painter.scss */
 .sliders label {
   display: inline-block;
   margin: 0 10px 0 10px;
   width: 55px;
   font-size: 14px; }
-/* line 211, painter.scss */
+/* line 255, painter.scss */
 .sliders input {
   position: relative;
   top: 2px; }
 
-/* line 217, painter.scss */
+/* line 261, painter.scss */
 #addNewColor {
   position: relative;
   background: #946d9b;
@@ -248,6 +310,7 @@ header {
   display: block;
   font-size: 16px;
   border: none;
+  font-family: 'Open Sans', sans-serif;
   border-radius: 5px;
   clear: both;
   line-height: 40px;
@@ -255,10 +318,18 @@ header {
   margin: 12px 0px -9px;
   padding: 5px 10px;
   width: 100%; }
-  /* line 38, painter.scss */
+  /* line 39, painter.scss */
   #addNewColor:enabled:active {
     top: 2px;
     box-shadow: none; }
-  /* line 42, painter.scss */
+  /* line 43, painter.scss */
   #addNewColor:disabled {
     opacity: 0.7; }
+
+/********** FOOTER **********************/
+/* line 272, painter.scss */
+footer {
+  margin-top: 40px;
+  background: #444;
+  color: #eee;
+  padding: 10px 0; }
