--- a/css/painter.css
+++ b/css/painter.css
@@ -62,7 +62,7 @@ h1 {
     font: 16px/1 Arial sans-serif;
     max-width: 100%;
     max-height: 100%;
-    padding: 20px; }
+    border-radius: 5px; }
 
 /* line 112, painter.scss */
 #pokemonName {
@@ -102,9 +102,9 @@ h1 {
   clear: both;
   border-radius: 5px;
   font-size: 36px;
-  line-height: 30px;
+  line-height: 36px;
   margin: 10px auto;
-  padding: 15px 20px; }
+  padding: 8px 20px; }
   /* line 39, painter.scss */
   #newRound:enabled:active {
     top: 2px;
@@ -156,7 +156,7 @@ h1 {
   max-width: 100%;
   width: 100%;
   height: auto;
-  background: #fff;
+  background: #bbb;
   display: block;
   margin: 10px auto 0px;
   border-radius: 5px;
