--- a/css/painter.css
+++ b/css/painter.css
@@ -109,7 +109,7 @@ h1 {
   padding: 8px 20px; }
   /* line 39, painter.scss */
   #newRound:enabled:active {
-    top: 2px;
+    top: 4px;
     box-shadow: none; }
   /* line 43, painter.scss */
   #newRound:disabled {
@@ -143,7 +143,7 @@ h1 {
   display: none; }
   /* line 39, painter.scss */
   #share:enabled:active, #save:enabled:active {
-    top: 2px;
+    top: 4px;
     box-shadow: none; }
   /* line 43, painter.scss */
   #share:disabled, #save:disabled {
@@ -236,8 +236,8 @@ h1 {
   background: #325bc5; }
 
 /* line 14, painter.scss */
-.purple {
-  background: #992fe0; }
+.pink {
+  background: #fad0de; }
 
 /* line 14, painter.scss */
 .brown {
@@ -290,46 +290,27 @@ h1 {
   font-family: 'Open Sans', sans-serif;
   border-radius: 5px;
   clear: both;
-  line-height: 40px;
   border-radius: 5px;
   margin: 10px auto;
-  padding: 5px 10px;
+  padding: 10px;
   width: 90%;
   font-size: 20px; }
   /* line 39, painter.scss */
   #addNewColor:enabled:active {
-    top: 2px;
+    top: 4px;
     box-shadow: none; }
   /* line 43, painter.scss */
   #addNewColor:disabled {
     opacity: 0.7; }
 
 /* line 253, painter.scss */
-#newColor {
-  display: none;
-  height: 50px;
-  width: 50px;
-  border-radius: 50px;
-  cursor: pointer;
-  border: 0;
-  box-shadow: 0 2px 0 0 #222;
-  background: #ffbee3;
-  width: 80px;
-  height: 80px;
-  border-radius: 50px;
-  box-shadow: 0 3px 0 0 #222;
-  float: left;
-  border: none;
-  margin: 20px; }
-
-/* line 266, painter.scss */
 .sliders {
   padding-top: 4px; }
-  /* line 268, painter.scss */
+  /* line 255, painter.scss */
   .sliders p {
     margin: 8px 0;
     vertical-align: middle; }
-  /* line 272, painter.scss */
+  /* line 259, painter.scss */
   .sliders label {
     text-align: right;
     font-family: "Open Sans",sans-serif;
@@ -338,29 +319,29 @@ h1 {
     margin: 0 10px 0 10px;
     width: 20%;
     font-size: 16px; }
-  /* line 280, painter.scss */
+  /* line 267, painter.scss */
   .sliders input {
     position: relative;
     width: 60%;
     top: 4px; }
 
 /********** FOOTER **********************/
-/* line 291, painter.scss */
+/* line 278, painter.scss */
 footer {
   margin-top: 40px;
   background: #444;
   color: #eee;
   padding: 20px 0; }
-  /* line 296, painter.scss */
+  /* line 283, painter.scss */
   footer #galleryLink {
     float: left; }
-  /* line 299, painter.scss */
+  /* line 286, painter.scss */
   footer #byline {
     float: right; }
-  /* line 302, painter.scss */
+  /* line 289, painter.scss */
   footer a {
     text-decoration: none;
     color: #BD9E70; }
-    /* line 305, painter.scss */
+    /* line 292, painter.scss */
     footer a:hover {
       color: #E4C08A; }
